<resources>
    <string name="app_name" translatable="false">BabelRestaurant</string>
    <string name="home">Home</string>
    <string name="categorise">Categorise</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <string name="skip"> <u>Skip</u> </string>
    <string name="choose_your_favorite_meal">Choose your favorite meal</string>
    <string name="choose_your_favorite_meal_desc">Choose any meal from the list and get to know the meal details.</string>
    <string name="place_your_order">Place your food order</string>
    <string name="place_your_order_desc">After confirming your order, the meal will be delivered as soon as possible.</string>
    <string name="enjoy_your_mael">Enjoy your food</string>
    <string name="enjoy_your_mael_desc">Ones your delivery arrives, \n it\'s time to dig in 😉</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
    <string name="to_babel_restaurant">to Babel Restaurant</string>
    <string name="the_taste_that_you_ll_remember">The taste that you\'ll remember</string>
    <string name="don">Don</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="your_favorite_meal">Look for your favorite meal through \n the menu or sections</string>
    <string name="order_your_favorite_food">Order your favorite food</string>
    <string name="common_meals">Common meals</string>
    <string name="meal_list">Meal list</string>
    <string name="grilled_chechen">Grilled chicken</string>
    <string name="meal_description">A little bit of description about the meal A little bit of description about the meal.</string>
    <string name="category">Category</string>
    <string name="meat_meals">Meat meals</string>
    <string name="rice_meals">Rice meals</string>
    <string name="snacks">Snacks</string>
    <string name="soup">Soup</string>
    <string name="add_your_favorites_notify">Add your favorites here \n by clicking the heart button on the card.</string>
    <string name="edit_account">Edit account</string>
    <string name="orders_history">Orders history</string>
    <string name="settings">Settings</string>
    <string name="log_out">log out</string>
    <string name="version">Version 1.0</string>

    <string name="status">Status:</string>
    <string name="name">Name:</string>
    <string name="order_number">Order number:</string>
    <string name="date">Date:</string>

    <string name="order_accepted">Order accepted</string>
    <string name="order_declined">Order declined</string>
    <string name="under_review">Under review</string>
    <string name="are_you_sure">Are you sure !</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="language">language</string>
    <string name="night_mode">Night mode</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>

    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="select_language">Select the language</string>
    <string name="order_now">ORDER NOW</string>
    <string name="description">Description</string>
    <string name="add_snacks">Add snacks</string>

    <string name="order_details">Order Details</string>
    <string name="meal">Meal :</string>
    <string name="amount">Amount :</string>
    <string name="price">Price :</string>
    <string name="snack">Snacks :</string>
    <string name="Confirm">Confirm</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password!</string>
    <string name="register">Register</string>
    <string name="new_account">Create new account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have account</string>
    <string name="textBoxNote">Make sure to fill all the text box.</string>
    <string name="password_not_match">Password does not match</string>
    <string name="password_text_box_error">The field cannot be empty</string>
    <string name="badly_formatted_email">The email address is Badly formatted.</string>
    <string name="short_password">Password length should be greater than 6 letters</string>
    <string name="full_name">Full name</string>
    <string name="reset_email_message">Pleas type your email, \nwe will send you an email to reset your password.</string>
    <string name="send">Send</string>
    <string name="deliver_address">Deliver address</string>
    <string name="save">Save</string>
    <string name="no_address_alert">No food delivery address, press OK to add one</string>
    <string name="no_network_available">No network connection !</string>
    <string name="network_issue">A problem occurred, please try again later.</string>
    <string name="location_permission">we need location permission to send the order to your location</string>
    <string name="location_activate">Please activate the site so that we can deliver the order to your current location</string>
    <string name="no_orders">No Orders yet!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>